examples/test/testpolicy7782.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7782
  namespace: namespace13
spec:
  podSelector:
    matchLabels:
      key34: value24
      key37: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value13
          key20: value25
      podSelector:
        matchLabels:
          key20: value39
          key18: value3
